# golf_game

./: Cargo.toml  README.md  Update.md  new_window.rs
Data/: CRAZY_HDP.TEVES  CUSTOM.TEVES  LINUXPORTTES_R3tr0.TEVES  fjgj_hjgj.TEVES  level0.TEVES  nivel2_cualquiera.TEVES  pruebaabel_Manuel teves.TEVES  y_y.TEVES
Docs/: Documentation.md
src/: app.rs  game.rs  global_properties.rs  main.rs
src/basics/: button.rs  charge_animation.rs  input_form.rs  level.rs  obstacles.rs  physics.rs  popup_message.rs  slider_input.rs  subwindow.rs  visual_effects.rs  win_info.rs  window.rs
src/buttons/: arrow_button.rs  credits_button.rs  home_button.rs  load_level_button.rs  make_level_button.rs  play_button.rs  replay_button.rs  save_button.rs
src/game_components/: background.rs  ball.rs  goal.rs  pointing.rs  trajectory_viewer.rs  wall.rs  water.rs
src/level_loader/: level_loader.rs
src/level_loader/impls/: level_loader_main_decoder_impl.rs  level_loader_sub_window_impl.rs  level_loader_wall_decoder.rs
src/level_maker/: level_maker.rs
src/level_maker/impls/: level_maker_basics_impl.rs  level_maker_builders_impl.rs  level_maker_drag_impl.rs  level_maker_properties_subwin_impl.rs  level_maker_save_impl.rs  level_maker_sub_window_impl.rs  level_maker_sub_window_save_impl.rs
src/menus/: main_menu.rs  main_menu_subwindow_load_impl.rs  pause_menu.rs  win_menu.rs
