[package]
name = "golf_game"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Teves"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
rand = "0.8.5"

# [profile.release]
# opt-level = 3
[profile.release]
lto = true
opt-level = "z"
incremental=false
codegen-units=3

[dependencies.sfml]
version = "0.20.0"